--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Autocomplete</title>
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -13,6 +14,11 @@
         <![endif]-->
 
         <p>Hello world!</p>
+        <form>
+            <input type="url" name="comment" id="target">
+        </form>
+        <div id="users">
+        </div>
         <script src="autocomplete.js"></script>
     </body>
 </html>
