--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
         <![endif]-->
 
         <p>Hello world!</p>
-        <form>
+        <textarea id="commentbox"></textarea>
+        <!-- <form>
             <input type="url" name="comment" id="target">
-        </form>
+        </form> -->
         <div id="users">
         </div>
         <script src="autocomplete.js"></script>
