--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Autocomplete</title>
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/jquery.textcomplete.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-        <script src="node_modules/jquery-textcomplete/dist/jquery.textcomplete.js"></script>
-        <link rel="stylesheet" type="text/css" href="node_modules/jquery-textcomplete/dist/jquery.textcomplete.css">
         <link href='https://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css'>
     </head>
     <body>
@@ -21,6 +20,7 @@
             <div id="users">
             </div>
         </section>
-        <script src="autocomplete.js"></script>
+        <script src="js/jquery.textcomplete.js"></script>
+        <script src="js/autocomplete.js"></script>
     </body>
 </html>
